--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "build": "babel src -d dist"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
